# japanese-arrows

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.agent/docs/: code-structure.md  generator-design.md  puzzle-file-format.md  puzzle-rules.md  rules-design.md  solver-design.md  website.md
.agent/rules/: code-style.md  project-info.md
.github/workflows/: daily_release_update.yml
config/: rules.yaml
examples/: print_puzzle.py
japanese_arrows/: __init__.py  compiler.py  io.py  models.py  optimizer.py  parser.py  rules.py  solver.py  type_checking.py  universe.py
japanese_arrows/generator/: __init__.py  constraints.py  generator.py
japanese_arrows/site_gen/: __init__.py  archive.py  assets.py  deploy_puzzle.py  sync.py
japanese_arrows/solver/: __init__.py  definitions.py  solver.py  utils.py
scripts/: build_archive.py  deploy.py  deploy_puzzle.py  generate_and_deploy.py  generate_batch_analysis.py  generate_puzzle.py  generate_web_assets.py  generate_weekly_puzzles.py  solve_with_trace.py
tests/config/: test_rules.yaml
tests/integration/: test_generator.py  test_solver_factory_integration.py
tests/properties/: test_models_prop.py
tests/unit/: test_backtracking.py  test_constraints.py  test_io.py  test_models_unit.py  test_optimizer.py  test_parser.py  test_solver.py  test_solver_factory.py  test_type_checking.py  test_universe.py
web/: about.html  impressum.html  imprint.html  index.html  privacy.html  robots.txt  script.js  style.css
web/archive/: archive.js  index.html
web/assets/: puzzles.json
web/modules/: input.js  modals.js  navigation.js  puzzle.js  render.js  state.js  storage.js
web/styles/: about.css  archive.css  (+3 more)
(+161 files in other folders)
