[project]
name = "japanese-arrows"
version = "0.1.0"
description = "A Japanese arrows project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Standard uv tools configuration can go here

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, Pyflakes, isort

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
lint = [
    "mypy>=1.19.1",
    "pre-commit>=4.1.0",
    "ruff>=0.14.13",
]
