[project]
name = "japanese-arrows"
version = "0.1.0"
description = "A Japanese arrows project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = []
# Standard uv tools configuration can go here

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, Pyflakes, isort

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["misc"]

[dependency-groups]
dev = [
    "hypothesis>=6.150.2",
    "mypy>=1.19.1",
    "pre-commit>=4.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "types-pyyaml>=6.0.12",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
]
